fix: markdown heading alignment

--- a/packages/src/assets/scss/zero/components/markdown.scss
+++ b/packages/src/assets/scss/zero/components/markdown.scss
@@ -222,7 +222,7 @@
   .heading-anchor {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     position: relative;
     &:hover {
       .copy-button {
